fix: header and body scrollbar

--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -25,6 +25,14 @@ body {
     overflow: hidden;
   }
 
+  &.ReactModal__Body--open {
+    overflow: hidden;
+
+    @screen laptop {
+      padding-right: 0.5rem;
+    }
+  }
+
   overflow-x: hidden;
 }
 
